--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@
 
         <repository>
             <id>vault-repo</id>
-            <url>http://nexus.hc.to/content/repositories/pub_releases</url>
+            <url>https://jitpack.io</url>
         </repository>
 
         <repository>
@@ -70,6 +70,11 @@
             <id>placeholderapi-repo</id>
             <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
         </repository>
+
+        <repository>
+            <id>playerpoints-repo</id>
+            <url>https://repo.dakanilabs.com/repository/public</url>
+        </repository>
     </repositories>
 
     <dependencyManagement>
@@ -84,7 +89,14 @@
             <dependency>
                 <groupId>net.milkbowl.vault</groupId>
                 <artifactId>VaultAPI</artifactId>
-                <version>1.6</version>
+                <version>1.7</version>
+                <scope>provided</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.black_ixx</groupId>
+                <artifactId>PlayerPoints</artifactId>
+                <version>2.1.3</version>
                 <scope>provided</scope>
             </dependency>
 
